# autonomous_fighting_robotcd

./: README.md  exemplo.py
progamming_esp32/: progamming_esp32.ino
progamming_esp32/cpp/: motores.cpp
progamming_esp32/hpp/: motores.hpp
ros2/: structure.txt
ros2/ws_robot/install/: local_setup.sh  setup.sh
ros2/ws_robot/install/process_node/share/ament_index/resource_index/parent_prefix_path/: process_node
ros2/ws_robot/install/process_node/share/process_node/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2/ws_robot/install/sensores_robot/lib/sensores_robot/: sensores_distancia_node  sensores_reflectancia_node
ros2/ws_robot/install/sensores_robot/share/sensores_robot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2/ws_robot/install/sensores_robot/share/sensores_robot/cmake/: sensores_robotConfig.cmake
ros2/ws_robot/log/: latest_build
ros2/ws_robot/src/process_node/: CMakeLists.txt
ros2/ws_robot/src/process_node/src/: process_node.cpp
ros2/ws_robot/src/sensores_robot/: CMakeLists.txt
ros2/ws_robot/src/sensores_robot/src/: sensores_distancia_node.cpp  sensores_reflectancia_node.cpp
